# psychology-appointment-scheduler-aws

./: README.md
psychology-appointment-scheduler-aws/: README.md  package-lock.json
psychology-appointment-scheduler-aws/src/Medication/: JohnDoe.hs  Medication.hs  Notification.hs  scheduler.cabal  stack.yaml  template.yaml
psychology-appointment-scheduler-aws/src/Medication/Aws/: Lambda.hs
psychology-appointment-scheduler-aws/src/Medication/Main/: Main.hs
psychology-appointment-scheduler-aws/test/: PsychologySchedulerTest.hs
