executable psychology-appointment-scheduler
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , amazonka
                     , amazonka-core
                     , amazonka-dynamodb
                     , amazonka-sns
                     , aeson
                     , text
                     , lens
                     , containers
                     , aws-lambda-haskell-runtime
  default-language:    Haskell2010